tests/baselines/reference/parserMemberAccessorDeclaration16.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration16.ts(2,8): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration16.ts(2,8): error TS1052: A 'set' accessor parameter cannot have an initializer.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration16.ts (2 errors) ====
    class C {
       set Foo(a = 1) { }
           ~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
           ~~~
!!! error TS1052: A 'set' accessor parameter cannot have an initializer.
    }